src/objects/cb5__CBReportColumn__c.object
<CustomObject>
    <fields>
        <fullName>cb5__CBPeriod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Period</label>
        <referenceTo>cb5__CBPeriod__c</referenceTo>
        <relationshipLabel>CB Report Columns</relationshipLabel>
        <relationshipName>CB_Report_Columns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__CBReport__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>CB Report</label>
        <referenceTo>cb5__CBReport__c</referenceTo>
        <relationshipLabel>CB Report Columns</relationshipLabel>
        <relationshipName>CBReportColumns</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__CBStyle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Style</label>
        <referenceTo>cb5__CBStyle__c</referenceTo>
        <relationshipLabel>CB Report Columns</relationshipLabel>
        <relationshipName>CB_Report_Columns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__Color__c</fullName>
        <defaultValue>&apos;white&apos;</defaultValue>
        <label>Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__FontStyle__c</fullName>
        <label>Font Style</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                    <default>true</default>
                    <label>normal</label>
                </value>
                <value>
                    <fullName>Italic</fullName>
                    <label>italic</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cb5__Formula__c</fullName>
        <description>Formula columns to calculate some values. For example: $1 * $2 / 2</description>
        <inlineHelpText>Formula columns to calculate some values. For example: $1 * $2 / 2</inlineHelpText>
        <label>Formula</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cb5__MasterColumn__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Column</label>
        <referenceTo>cb5__CBReportColumn__c</referenceTo>
        <relationshipLabel>Master Columns</relationshipLabel>
        <relationshipName>MasterColumns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__NeedYTD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Need YTD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cb5__OrderNumber__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Order Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cb5__Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Master</fullName>
                    <default>true</default>
                    <label>Master</label>
                </value>
                <value>
                    <fullName>Simple</fullName>
                </value>
                <value>
                    <fullName>Formula</fullName>
                </value>
                <value>
                    <fullName>Total</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cb5__Unit__c</fullName>
        <defaultValue>&apos;$&apos;</defaultValue>
        <label>Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__ValueField__c</fullName>
        <label>Value Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__isHidden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Hidden</label>
        <type>Checkbox</type>
    </fields>
    <label>CB Report Column</label>
    <listViews>
        <fullName>cb5__All</fullName>
        <columns>NAME</columns>
        <columns>cb5__CBReport__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CB Report Column Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB Report Columns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>